--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,20 +1,15 @@
 <resources>
 
-  <!-- Base application theme. -->
-  <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-    <!-- Customize your theme here. -->
-    <item name="colorPrimary">@color/colorPrimary</item>
-    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-    <item name="colorAccent">@color/colorAccent</item>
+    <style name="AppTheme" parent="FlowAppTheme">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
 
-    <!-- full screen-->
-    <!--<item name="android:windowFullscreen">true</item>-->
-    <!-- no title bar -->
-    <!--<item name="android:windowNoTitle">true</item>-->
-      <item name="actionBarTabBarStyle">@style/Theme.AppCompat.NoActionBar</item>
-  </style>
+        <!--<item name="Flow.Primary.Color">#000</item>-->
 
-    <style name="ImageTranslucentTheme" parent="AppTheme">
+        <item name="actionBarTabBarStyle">@style/Theme.AppCompat.NoActionBar</item>
+
     </style>
 
 </resources>
