--- a/flow/src/main/res/layout/nav_bar.xml
+++ b/flow/src/main/res/layout/nav_bar.xml
@@ -3,7 +3,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:background="@color/colorPrimary"
+        android:background="?attr/Flow.Primary.Color"
         android:paddingTop="20dp"
         android:gravity="center"
         android:orientation="horizontal">
@@ -15,7 +15,7 @@
             android:layout_weight="0"
             android:textSize="25dp"
             android:background="@android:color/transparent"
-            android:textColor="@color/textColorPrimary"
+            android:textColor="?attr/Flow.Primary.TextColor"
             android:text="◁" />
 
         <TextView
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textColor="@color/textColorPrimary"
+            android:textColor="?attr/Flow.Primary.TextColor"
             android:gravity="center_horizontal"
             android:lines="1"
             android:textSize="18dp"
@@ -37,7 +37,7 @@
             android:layout_weight="0"
             android:textSize="25dp"
             android:background="@android:color/transparent"
-            android:textColor="@color/textColorPrimary"
+            android:textColor="?attr/Flow.Primary.TextColor"
             android:text="···" />
     </LinearLayout>
 </layout>
