--- a/flow/src/main/res/values-v21/styles.xml
+++ b/flow/src/main/res/values-v21/styles.xml
@@ -1,8 +1,8 @@
 <resources>
 
-    <style name="ImageTranslucentTheme" parent="AppTheme">
+    <style name="ImageTranslucentTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowTranslucentStatus">false</item>
-        <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:windowTranslucentNavigation">false</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 </resources>
