--- a/flow/src/main/res/layout/activity_main.xml
+++ b/flow/src/main/res/layout/activity_main.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <RelativeLayout
+        android:orientation="vertical"
         android:id="@+id/activity_container"
-        android:background="?attr/Flow.Success.Color"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <!--<include layout="@layout/nav_bar" android:id="@+id/nav_bar"/>-->
-        <!--<LinearLayout-->
-            <!--android:layout_below="@+id/nav_bar"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:gravity="center"-->
-            <!--android:orientation="vertical"-->
-            <!--android:background="#aaa">-->
-        <!--</LinearLayout>-->
+        <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:src="@drawable/timg" />
     </RelativeLayout>
 </layout>
