--- a/flow/src/main/res/layout/fragment_main.xml
+++ b/flow/src/main/res/layout/fragment_main.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <RelativeLayout
-        android:background="?attr/Flow.Error.Color"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <include layout="@layout/nav_bar" android:id="@+id/nav_bar"/>
+        <include
+            layout="@layout/nav_bar"
+            android:id="@+id/nav_bar" />
         <LinearLayout
             android:id="@+id/fragment_container"
-            android:layout_below="@+id/nav_bar"
             android:layout_width="match_parent"
+            android:layout_below="@+id/nav_bar"
+            android:minHeight="100dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:background="#aaa">
+            android:background="#666">
         </LinearLayout>
     </RelativeLayout>
 </layout>
