--- a/flow/src/main/res/anim/slide_left_out.xml
+++ b/flow/src/main/res/anim/slide_left_out.xml
@@ -4,11 +4,11 @@
 <translate
     android:fromXDelta="0%p"
     android:toXDelta="-100%p"
-    android:duration="200"/>
+    android:duration="300"/>
 
-<alpha
-    android:fromAlpha="1.0"
-    android:toAlpha="0.5"
-    android:duration="200"/>
+<!--<alpha-->
+    <!--android:fromAlpha="1.0"-->
+    <!--android:toAlpha="0.7"-->
+    <!--android:duration="300"/>-->
 
 </set>
