--- a/app/src/main/res/layout/image.xml
+++ b/app/src/main/res/layout/image.xml
@@ -2,13 +2,15 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:paddingTop="20dp"
         android:gravity="center"
         android:background="?attr/Flow.Secondary.Color"
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/img"
+            android:clickable="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
