--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,8 @@
 
         <item name="actionBarTabBarStyle">@style/Theme.AppCompat.NoActionBar</item>
 
+        <item name="android:windowBackground">@drawable/timg</item>
+
     </style>
 
 </resources>
