--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
   <color name="colorPrimaryDark">#0396FF</color>
   <color name="colorAccent">#FF4081</color>
   <color name="textColorPrimary">#FFFFFF</color>
+  <color name="normalBorder">#eee</color>
 </resources>
