--- a/flow/src/main/res/anim/slide_in_left.xml
+++ b/flow/src/main/res/anim/slide_in_left.xml
@@ -7,9 +7,9 @@
         android:fromXDelta="-40%p"
         android:toXDelta="0%p" />
 
-    <alpha
-        android:duration="300"
-        android:fromAlpha="0.85"
-        android:toAlpha="1" />
- 
+    <!--<alpha-->
+        <!--android:duration="300"-->
+        <!--android:fromAlpha="0.85"-->
+        <!--android:toAlpha="1" />-->
+
 </set>
